# library-system

./: .gitignore  CMakeLists.txt  README.md
headers/: Author.h  Book.h  Library.h  Shelf.h
src/: Author.cpp  Book.cpp  Library.cpp  Shelf.cpp  main.cpp
